<resources>
    <string name="app_name">Bookify</string>
    <string name="book_now">Book Now</string>
    <string name="select_dates">Please Select Date</string>
    <string name="reservation_confirmation">Reservation Confirmation</string>
    <string name="booking_price_details">Booking Price Details</string>
    <string name="the_number_of_reservation_days">The Number of Reservation Days</string>
    <string name="normal_day_rate">Normal Day Rate</string>
    <string name="holiday_price_rate">Holiday Price Rate</string>
    <string name="insurance_value">Insurance Value</string>
    <string name="commission_value">Commission Value</string>
    <string name="discount_value">Discount Value</string>
    <string name="total_summation">Total Summation</string>
    <string name="notes">Notes</string>
    <string name="usd">USD</string>
    <string name="day">Day</string>
    <string name="bookify">Bookify</string>
    <string name="price_per_day">Price Per Day:</string>
    <string name="chalets">Chalets</string>
    <string name="price_start_from">Price Start From</string>
    <string name="filter">Filter</string>
    <string name="date_starting_from_yyyy_m_d">Date Starting From (yyyy-m-d)</string>
</resources>